# lepatch

./: Cargo.toml
src/: lib.rs  metadata.rs  reader.rs  storage.rs  writer.rs
src/command/: backup.rs  mod.rs  restore.rs
src/metadata/: bincode.rs  mod.rs
src/storage/: blob.rs  mod.rs
