[package]
name = "lepatch"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"

[[bin]]
name = "main"
path = "src/bin/mod.rs"

[dependencies]
async-trait = "0.1.89"
bincode = "1.3.3"
blake3 = { version = "1.8.2", features = ["traits-preview"] }
fastcdc = "3.2.1"
fs2 = "0.4.3"
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
tokio = { version = "1.48.0", features = ["fs", "io-util", "sync"] }
tokio-util = { version = "0.7.17", features = ["compat"] }
walkdir = "2.5.0"

[features]
experimental = []
