[package]
name = "lepatch"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"

[[bin]]
name = "main"
path = "src/bin/mod.rs"

[dependencies]
async-trait = "0.1.89"
bincode = "1.3.3"
blake3 = { version = "1.8.2", features = ["traits-preview"] }
clap = { version = "4.5.53", features = ["derive"] }
fastcdc = "3.2.1"
fs2 = "0.4.3"
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "rt", "rt-multi-thread", "sync"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
walkdir = "2.5.0"

[features]
experimental = []
